# spyhop

./: .gitignore  CLAUDE.md  CONFIG_REFERENCE.md  README.md  config.toml  pyproject.toml
docs/: shaping.md
research/: 2026-03-24-scoring-analysis.md  ADDENDUM_KELLY_CRITERION.md  API_LANDSCAPE.md  RESEARCH_PLAN.md  REWARD_FARMING.md  RQ1_LANDSCAPE.md  RQ2_WHALE_PATTERNS.md  RQ3_DETECTION_HEURISTICS.md  RQ4_COUNTER_TRADING.md  SYNTHESIS.md  TRADING_STRATEGIES.md  V4B_FARM_DETECTION.md
scripts/: backfill_resolutions.py  clean_dataset.py  dataset_analysis.py  dataset_analysis2.py  sports_analysis.py  sports_hypothesis.py  sports_thesis_validation.py  sports_timing.py
src/spyhop/: __main__.py  cli.py  config.py
src/spyhop/detector/: __init__.py  base.py  entry_price.py  fresh_wallet.py  niche_market.py  niche_nonlinear.py  scorer.py  size_anomaly.py  timing_gate.py  wallet_experience.py
src/spyhop/ingestor/: rtds.py
src/spyhop/paper/: __init__.py  executor.py  resolver.py  risk.py  trader.py
src/spyhop/profiler/: event.py  market.py  wallet.py
src/spyhop/storage/: db.py
tests/: test_dedup.py  test_paper_trading.py  test_report.py  test_resolution.py
